
* If a sidecar file exists metadata can be read from and updated metadata
  written to the sidecar file instead of the image file. This is controlled
  by a new preference item.  Files in the same folder as the image file with
  the same name but with an extension of ".xmp" are assumed to be sidecar files.
  
* The presence of a sidecar file is indicated by a '*' following the image name.

* Add a preference item that controls coordinate display formats.   Latitude
  and longitude can be displayed in one of three forms:
  - dd.ddddd
  - dd° mm.mmmm' N (or S, E, W depending upon coordinate)
  - dd° mm' ss.ss" N (or S, E, W depending upon coordinate)

* Location coordinates can be entered by double clicking on either the
  latitude or longitude of an entry.  Coordinates can be entered in
  degrees, degrees and minutes, or degrees, minutes, and seconds.
  Use of °, ', and " indicators are optional.

* Reading image metadata has been moved from the main queue. As a result opening
  a large number of images should be slightly faster.

* Preferences window changed.  Textual explanations of buttons have been
  moved to tool tips.

* ExifTool version 11.41

### Bug fixes

* Updated image locations could sometimes be written with the wrong longitude
  reference.

* fix crash that occured in the app was launched by dragging images onto
  the app icon.

## GeoTag 4.5

### New Features

* center the map (more or less) on a track when the track is opened.
* Add preference to select track color for GPX tracks.
* change GPX file loaded notification to a sheet attached to the GeoTag main
  window.  Dual monitor users would sometimes find the pop-up previously used
  on the wrong monitor, i.e. no the monitor they were looking at.
* Verify a file can be written by exiftool. If not do not allow attempted
  updates that will fail during a save.   HEIC (iPhone) files are not writable.
* exiftool 11.32
* swift 5

### Bug Fixes
